# JoltC

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  README.md  test-all-flags.sh
.github/workflows/: ci.yml
HelloWorld/: README.md  main.cpp
JoltC/: Enums.h  Enums_Test.cpp  Functions.h  Generated.h  JoltC.cpp  JoltC.h  JoltPhysicsC.cpp  JoltPhysicsC.h  JoltPhysicsC_Extensions.cpp  Test.cpp
JoltCImpl/: Generated.h  JoltC.cpp  Test.cpp
generate/: Cargo.toml  build.rs
generate/src/: api.rs  builtin_types.rs  emit.rs  enums.rs  macros.rs  main.rs  mirrored_structs.rs
include/: joltc.h
input/: BuiltinTypes.inc  Enums.h  MirroredStructs.h
