[package]
name = "generate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
fs-err = "2.11.0"
heck = "0.5.0"
regex = "1.10.4"
walkdir = "2.5.0"
